# sdd-barista-reference

./: .gitignore  AGENTS.md  cleanup-demo.sh  duplicate-demo.sh  pyproject.toml
.agents/conventions/: code-layout.env  code-layout.md
docs/: PRD.md  REPLICATION.md
